[BE, FE] feat: enhance exam functionality and structure
